--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+
+@font-face {
+	font-family: 'circularMedium';
+	src: url(./fonts/circular/circular-medium.ttf);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+	font-family: 'circularBook';
+	src: url(./fonts/circular/circular-book.otf);
 }
+
+@font-face {
+	font-family: 'circularBold';
+	src: url(./fonts/circular/circular-bold.otf);
+}
+
+@font-face {
+	font-family: 'circularLight';
+	src: url(./fonts/circular/circular-light.ttf);
+}
+
+@tailwind utilities;
